--- a/src/shouye.html
+++ b/src/shouye.html
@@ -212,18 +212,17 @@
         <div class="remind">
             <div>微信和QQ是两个独立账号，账号信息不互通</div>
         </div>
-        <div class="qq">
+        <div class="qq" style="display: none;">
             <p class="title">快速安全登录</p>
-            <p>
+            <p class="text">
                 请使用
                 <a href="" target="_blank">QQ手机版</a>
                 扫描二维码，
                 <br>
                 或点击头像授权登录。
             </p>
-            <img src="https://ssl.ptlogin2.qq.com/ptqrshow?appid=21000501&e=2&l=M&s=3&d=72&v=4&t=0.13891833411356114&daid=8&pt_3rd_aid=0"
-                alt="">
-            <p>
+            <img src="img/qqerweima.png" alt="" class="qqerweima">
+            <p class="checklist">
                 <a href="">帐号密码登录</a>
                 <span>|</span>
                 <a href="">注册新帐号</a>
@@ -231,11 +230,16 @@
                 <a href="">意见反馈</a>
             </p>
         </div>
-        <div style="display: none;">
-            <p>微信登录</p>
-            <img src="https://open.weixin.qq.com/connect/qrcode/0010fhk3wM6ILwXS" alt="">
-            <p>请使用微信扫描二维码登录</p>
-            <p>“聚诚品”</p>
+        <div class="wx">
+            <p class="title">微信登录</p>
+            <div class="wx-erweima">
+                <img src="img/wxerweima.png" alt="">
+                <p>
+                    请使用微信扫描二维码登录
+                    <br>
+                    “聚诚品”
+                </p>
+            </div>
         </div>
     </div>
 </body>
