注册页完成一半

--- a/src/shouye.html
+++ b/src/shouye.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="sass/style.css">
+    <link rel="Shortcut Icon" href="img/title-logo.png" />
+    <meta name="Description" content="穿越火线精美周边，正版授权好礼多多。">
+    <meta name="Keywords" content="腾讯周边商城,道聚城穿越火线周边商城,道聚城,道聚城周边,道聚城游戏,游戏周边商城,定制,定制周边、周边商品">
+    <title>首页-穿越火线周边商城</title>
+    <link rel="stylesheet" href="sass/shouye.css">
     <link rel="stylesheet" href="sass/common.css">
     <link rel="stylesheet" href="font/iconfont.css">
 </head>
@@ -120,6 +121,7 @@
         <div class="mid">
             <div class="mid-1"></div>
             <div class="mid-2"></div>
+            <div class="mid-3"></div>
         </div>
     </div>
     <div id="footer">
@@ -193,7 +195,7 @@
             <p><a href="//www.tencent.com/law/mo_law.shtml?/law/copyright.htm" target="_blank">腾讯公司 版权所有</a></p>
         </div>
     </div>
-    <div id="loginbox">
+    <div id="loginbox" style="display: none;">
         <a href="javascript:void(0)" title="关闭" class="close"></a>
         <div class="login-method">
             <ul>
@@ -212,7 +214,7 @@
         <div class="remind">
             <div>微信和QQ是两个独立账号，账号信息不互通</div>
         </div>
-        <div class="qq" style="display: none;">
+        <div class="qq">
             <p class="title">快速安全登录</p>
             <p class="text">
                 请使用
@@ -230,7 +232,7 @@
                 <a href="">意见反馈</a>
             </p>
         </div>
-        <div class="wx">
+        <div class="wx" style="display: none;">
             <p class="title">微信登录</p>
             <div class="wx-erweima">
                 <img src="img/wxerweima.png" alt="">
