注册结构完成

--- a/src/register.html
+++ b/src/register.html
@@ -70,11 +70,71 @@
                     </div>
                     <div class="head">每一天，乐在沟通。</div>
                 </div>
-            </div class="">
+                <form action="">
+                    <div class="textinput">
+                        <div class="flag">
+                            <div class="inp-ok"></div>
+                        </div>
+                        <label for="nickname" class="nametitle">昵称</label>
+                        <div class="inp-other">
+                            <input type="text" name="" id="nickname">
+                        </div>
+                        <div class="error hint">
+                            <div class="error-tips">昵称不能为空</div>
+                        </div>
+                    </div>
+                    <div class="textinput">
+                        <label for="pass" class="nametitle">密码</label>
+                        <div class="flag">
+                            <div class="inp-ok"></div>
+                        </div>
+                        <div class="inp-other">
+                            <input type="text" name="" id="pass">
+                        </div>
+                        <div class="error hint">
+                            <div class="error-tips">密码不能为空</div>
+                        </div>
+                        <div class="password-tips-group hint">
+                            <div class="password-tips">不能包括空格</div>
+                            <div class="password-tips">长度为8-16个字符</div>
+                            <div class="password-tips">必须包含字母、数字、符号中至少2种</div>
+                        </div>
+                    </div>
+                    <div class="textinput">
+                        <div class="phone-area">
+                            <div class="flag">
+                                <div class="inp-ok"></div>
+                            </div>
+                            <label for="phone" class="nametitle">手机号码</label>
+                            <div class="phone">
+                                <input id="phone" type="text">
+                            </div>
+                            <div class="input-tips-wrap">
+                                <div class="input-tips">可通过该手机号找回密码</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <input type="submit" name="" id="submit" value="立即注册">
+                    </div>
+                    <div class="guiding">
+                        <input type="checkbox" id="duoxuan">
+                        <label for="duoxuan" class="duoxuantishi"> 我已阅读并同意相关服务条款和隐私政策</label>&nbsp;
+                        <img src="https://4.url.cn/zc/v3/img/down.png" alt="">
+                        <img src="https://4.url.cn/zc/v3/img/up.png" alt="" style="display: none;">
+                        <div class="guiding-list" style="display: none;">
+                            <a href="" target="_blank">《QQ号码规则》</a>
+                            <a href="" target="_blank">《隐私政策》</a>
+                            <a href="" target="_blank">《QQ空间服务协议》</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="footer">Copyright <span>©</span> 1998-
+                <script>document.write((new Date).getFullYear())</script>
+                2019Tencent All Rights Reserved
+            </div>
         </div>
-
-
-
     </div>
 </body>
 
