--- a/src/register.html
+++ b/src/register.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link rel="Shortcut Icon" href="https://ssl.zc.qq.com/favicon.ico" />
     <title>QQ注册</title>
-    <link rel="stylesheet" href="sass/common.css">
-    <link rel="stylesheet" href="sass/regisitey.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/regisitey.css">
 </head>
 
 <body>
