--- a/src/shouye.html
+++ b/src/shouye.html
@@ -7,8 +7,8 @@
     <meta name="Description" content="穿越火线精美周边，正版授权好礼多多。">
     <meta name="Keywords" content="腾讯周边商城,道聚城穿越火线周边商城,道聚城,道聚城周边,道聚城游戏,游戏周边商城,定制,定制周边、周边商品">
     <title>首页-穿越火线周边商城</title>
-    <link rel="stylesheet" href="sass/shouye.css">
-    <link rel="stylesheet" href="sass/common.css">
+    <link rel="stylesheet" href="css/shouye.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="font/iconfont.css">
 </head>
 
