--- a/src/details.html
+++ b/src/details.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>详情页-穿越火线周边商城</title>
+    <meta name="Description" content="穿越火线精美周边，正版授权好礼多多。">
+    <meta name="Keywords" content="道聚城周边商城，道聚城穿越火线周边商城，道聚城，道聚城周边，道聚城游戏,游戏周边商城">
     <link rel="Shortcut Icon" href="https://mall.qq.com/favicon.ico" />
     <link rel="stylesheet" href="css/details.css">
     <link rel="stylesheet" href="css/common.css">
@@ -139,44 +141,216 @@
                         <div class="picdetails">
                             <ul class="picdetail-list">
                                 <li class="">
-                                   <a href="" style="outline: 0px; display: inline-block;">
-                                       <img src="" width="74" height="70" alt="商品图">
-                                   </a>
-                               </li>
+                                    <a href="" style="outline: 0px; display: inline-block;">
+                                        <img src="" width="74" height="70" alt="商品图">
+                                    </a>
+                                </li>
                                 <li class="">
-                                   <a href="" style="outline: 0px; display: inline-block;">
-                                       <img src="" width="74" height="70" alt="商品图">
-                                   </a>
-                               </li>
+                                    <a href="" style="outline: 0px; display: inline-block;">
+                                        <img src="" width="74" height="70" alt="商品图">
+                                    </a>
+                                </li>
                                 <li class="">
-                                   <a href="" style="outline: 0px; display: inline-block;">
-                                       <img src="" width="74" height="70" alt="商品图">
-                                   </a>
-                               </li>
+                                    <a href="" style="outline: 0px; display: inline-block;">
+                                        <img src="" width="74" height="70" alt="商品图">
+                                    </a>
+                                </li>
                                 <li class="">
-                                   <a href="" style="outline: 0px; display: inline-block;">
-                                       <img src="" width="74" height="70" alt="商品图">
-                                   </a>
-                               </li>
+                                    <a href="" style="outline: 0px; display: inline-block;">
+                                        <img src="" width="74" height="70" alt="商品图">
+                                    </a>
+                                </li>
                                 <li class="active">
-                                   <a href="" style="outline: 0px; display: inline-block;">
-                                       <img src="" width="74" height="70" alt="商品图">
-                                   </a>
-                               </li>
+                                    <a href="" style="outline: 0px; display: inline-block;">
+                                        <img src="" width="74" height="70" alt="商品图">
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                     <div class="fl product-info">
                         <h3 class="pord-name">M4A1-黑骑士 英雄级手办模型</h3>
                         <div class="pord-tips">12月4日-18日期间购买枪模可获得游戏抽奖50代金券，请购买后前往领取中心领取，领取后将不支持退款</div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="pord-price clearfix">
+                            <span class="fl pord-dispri">￥<strong>298.00</strong></span>
+                            <span class="fl pord-orpri">￥298.00</span>
+                        </div>
+                        <div class="pord-saleinfo clearfix">
+                            <div class="fl pord-salebox">
+                                <i class="ico-detail ico-vip">VIP</i>
+                                <span>VIP立减￥30.00</span>
+                            </div>
+                            <a href="" target="_blank" class="vip-link">【如何成为vip】</a>
+                        </div>
+                        <div class="pord-gift clearfix">
+                            <i class="gift-mark">赠品</i>
+                            <span>主题收集-黑骑士枪模,50活动代金券</span>
+                        </div>
+                        <div class="pord-detailbox clearfix">
+                            <div class="fl pord-sold">已售：<span>999</span></div>
+                            <div class="fl pord-totalcom">累计评价：<span class="commentNum">167</span></div>
+                            <div class="fr pord-starbox">
+                                <i class="ico-detail i-star10"></i>
+                                <span>5.0</span>
+                            </div>
+                        </div>
+                        <div class="mt10 pord-color pord-sellist clearfix">
+                            <label class="fl">枪模</label>
+                            <ul class="fl ml28">
+                                <li attrid="112" class=" current " style="overflow:hidden;">
+                                    <div class="pord-selbox">黑骑士</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="blk_detail_main_btn">
+                            <div class="mt10 pord-num clearfix">
+                                <label class="fl pt10">数量</label>
+                                <div class="fl ml42">
+                                    <a href="javascript:;"
+                                        class="fl num-plus numbtn num-plus btn_detail_main_buy_min"><i
+                                            class="ico-detail">-</i></a>
+                                    <input type="text" size="2" maxlength="3" stock_num="2001" limit_num="0"
+                                        class="fl nummidbtn num inpt_detail_main_buy_num" value="1">
+                                    <a href="javascript:;" class="fl numbtn num-minus btn_detail_main_buy_plus"><i
+                                            class="ico-detail">+</i></a>
+                                </div>
+                                <span class="pord-stock">（库存充足）</span>
+                            </div>
+                            <div class="pord-btn clearfix">
+                                <a id="btn_detail_cart_add" href="javascript:;" class="fl joincart-btn">加入购物车</a>
+                                <a id="btn_detail_cart_buy" href="javascript:;" class="fl ml30 buy-btn">立即购买</a>
+                                <a href="javascript:;" class="fl btn-collect">
+                                    <i class="ico-detail ico-collect"></i>
+                                    <span>收藏</span>
+                                </a>
+                                <a href="javascript:;" class="fl btn-collected" style="display: none">
+                                    <i class="ico-detail ico-collect"></i>
+                                    <span>已收藏</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="main">
+            <a href="https://cf.qq.com/" class="logo">
+                <img src="https://js01.daoju.qq.com/zb/cf/images/logo-cf-down.png" alt="">
+            </a>
+            <ul class="menu">
+                <li><a href="https://mall.qq.com/help.shtml?gotab=1"><span class="iconfont icon-qianbao"></span>购物指南</a>
+                </li>
+                <li><a href="https://mall.qq.com/help.shtml?gotab=2"><span class="iconfont icon-qiache"></span>配送方式</a>
+                </li>
+                <li><a href="https://mall.qq.com/help.shtml?gotab=3"><span class="iconfont icon-shuji"></span>常见操作</a>
+                </li>
+                <li><a href="https://mall.qq.com/help.shtml?gotab=4"><span class="iconfont icon-erji"></span>售后服务</a>
+                </li>
+                <li><a href="https://mall.qq.com/help.shtml?gotab=5"><span class="iconfont icon-duihuax"></span>联系我们</a>
+                </li>
+            </ul>
+            <ul class="picli">
+                <li>
+                    <img src="https://js01.daoju.qq.com/zb/cf/images/logo-cf-qr.png" alt="">
+                    <p>掌上穿越火线</p>
+                </li>
+                <li>
+                    <img src="https://js01.daoju.qq.com/zb/mall/images/jcp_gzh.jpg" alt="">
+                    <p>聚诚品公众号</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="mao">
+        <a href="" class="m1">
+            <span class="iconfont icon-wenjian"></span>
+            <span>我的<br>订单</span>
+        </a>
+        <a href="" class="m2">
+            <span class="iconfont icon-dizhi"></span>
+            <span>我的<br>地址</span>
+        </a>
+        <a href="" class="m3">
+            <span class="iconfont icon-gouwuche"></span>
+            <span>购<br>物<br>车</span>
+        </a>
+        <a href="" class="m4">
+            <span class="iconfont icon-qq"></span>
+            <span>咨询</span>
+        </a>
+    </div>
+    <div id="totop">
+        <a href="">
+            <span class="span1">Top</span>
+        </a>
+    </div>
+    <div id="footer-end">
+        <div class="main-footer-end">
+            <p><a href="//ieg.tencent.com" target="_blank">腾讯互动娱乐</a> | <a href="//game.qq.com/contract.shtml"
+                    target="_blank">服务条款</a>| <a href="//game.qq.com/privacy_guide.shtml"
+                    target="_blank">腾讯游戏隐私保护指引</a>| <a href="//game.qq.com/privacy_guide_children.shtml"
+                    target="_blank">腾讯游戏儿童隐私保护指引</a>| <a href="//e.tencent.com/" target="_blank">广告服务</a> | <a
+                    href="//game.qq.com/hr/" target="_blank">腾讯游戏招聘</a> | <a href="//kf.qq.com/"
+                    target="_blank">腾讯游戏客服</a> | <a href="//game.qq.com/gnav" target="_blank">游戏地图</a> | <a
+                    href="https://jiazhang.qq.com/jz/home.html?ADTAG=gamepcbottom" target="_blank">成长守护平台</a> | <a
+                    href="//game.qq.com/brand/business.htm" target="_blank">商务合作</a> | <a href="//www.qq.com/map/"
+                    target="_blank">网站导航</a></p>
+            <p><a href="//www.qq.com/culture.shtml" target="_blank"
+                    rel="nofollow">粤网文[2014]0633-233号</a>&nbsp;增值电信业务经营许可证：<a href="//www.qq.com/icp.shtml"
+                    target="_blank" rel="nofollow">粤B2-20090059</a>&nbsp;<a href="//www.qq.com/icp1.shtml"
+                    target="_blank" rel="nofollow">B2-20090028</a>&nbsp;违法和不良信息举报电话：0755-83767606</p>
+            <p class="e">COPYRIGHT © 1998 – 2019 TENCENT. ALL RIGHTS RESERVED.</p>
+            <p><a href="//www.tencent.com/law/mo_law.shtml?/law/copyright.htm" target="_blank">腾讯公司 版权所有</a></p>
+        </div>
+    </div>
+    <div id="loginbox" style="display: none;">
+        <a href="javascript:void(0)" title="关闭" class="close"></a>
+        <div class="login-method">
+            <ul>
+                <li class="qq-login">
+                    <a href="javascript:void(0);">
+                        <span>QQ账号登录</span>
+                    </a>
+                </li>
+                <li class="wx-login">
+                    <a href="javascript:void(0);">
+                        <span>微信账号登录</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="remind">
+            <div>微信和QQ是两个独立账号，账号信息不互通</div>
+        </div>
+        <div class="qq">
+            <p class="title">快速安全登录</p>
+            <p class="text">
+                请使用
+                <a href="" target="_blank">QQ手机版</a>
+                扫描二维码，
+                <br>
+                或点击头像授权登录。
+            </p>
+            <img src="img/qqerweima.png" alt="" class="qqerweima">
+            <p class="checklist">
+                <a href="">帐号密码登录</a>
+                <span>|</span>
+                <a href="">注册新帐号</a>
+                <span>|</span>
+                <a href="">意见反馈</a>
+            </p>
+        </div>
+        <div class="wx" style="display: none;">
+            <p class="title">微信登录</p>
+            <div class="wx-erweima">
+                <img src="img/wxerweima.png" alt="">
+                <p>
+                    请使用微信扫描二维码登录
+                    <br>
+                    “聚诚品”
+                </p>
             </div>
         </div>
     </div>
