重新创建链接后的代码

--- a/src/shouye.html
+++ b/src/shouye.html
@@ -16,8 +16,8 @@
     <div id="header">
         <div class="headertop">
             <div class="topmain">
-                <img src="img/cf-logo.jpg" alt="" class="cflogo">
-                <img src="img/qq-mall.jpg" alt="" class="qqmall">
+                <img src="https://js01.daoju.qq.com/zb/cf/images/logo-cf-up.png" alt="" class="cflogo">
+                <img src="https://js01.daoju.qq.com/zb/common/images/ico-comm5.png" alt="" class="qqmall">
                 <div class="cart">
                     <span class="iconfont icon-gouwuche"></span>
                     <a href="" class="text">购物车</a>
