完善首页导航

--- a/src/shouye.html
+++ b/src/shouye.html
@@ -46,6 +46,7 @@
                     <span>全部商品分类</span>
                     <span class="iconfont icon-xialaanniu"></span>
                 </a>
+                
             </div>
         </div>
         <div class="secondnav">
@@ -114,14 +115,93 @@
                 </li>
             </ul>
         </div>
+        
     </div>
     <div id="body">
         <!-- 轮播图（渲染） -->
-        <div class="banner"></div>
-        <div class="mid">
-            <div class="mid-1"></div>
-            <div class="mid-2"></div>
-            <div class="mid-3"></div>
+        <div class="banner">
+            <div class="slidebann">
+                <div class="flash_bar"></div>
+            </div>
+        </div>
+        <div class="mid index-main">
+            <div id="blk_index_productlist_a"></div>
+            <div id="blk_index_productlist_b">
+                <div class="index-tit clearfix">
+                    <h3>模型手办</h3>
+                    <span>品质重现，限量发售</span>
+                    <a href="" class="fr link-more">更多</a>
+                </div>
+                <div class="adbox">
+
+
+
+                </div>
+                <div class="good-list index-glist">
+                    <ul class="clearfix">
+                        <li>
+
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="blk_index_productlist_c">
+                <div class="index-tit clearfix">
+                    <h3>模型手办</h3>
+                    <span>品质重现，限量发售</span>
+                    <a href="" class="fr link-more">更多</a>
+                </div>
+                <div class="adbox">
+
+                </div>
+                <div class="good-list index-glist">
+                    <ul class="clearfix">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="blk_index_productlist_d">
+                <div class="index-tit clearfix">
+                    <h3>模型手办</h3>
+                    <span>品质重现，限量发售</span>
+                    <a href="" class="fr link-more">更多</a>
+                </div>
+                <div class="adbox">
+
+                </div>
+                <div class="good-list index-glist">
+                    <ul class="clearfix">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="blk_index_productlist_e">
+                <div class="index-tit clearfix">
+                    <h3>模型手办</h3>
+                    <span>品质重现，限量发售</span>
+                    <a href="" class="fr link-more">更多</a>
+                </div>
+                <div class="adbox">
+
+                </div>
+                <div class="good-list index-glist">
+                    <ul class="clearfix">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
     <div id="footer">
@@ -244,6 +324,7 @@
             </div>
         </div>
     </div>
+    <script src="script/index.js" type="module"></script>
 </body>
 
 </html>
